[gd_scene load_steps=2 format=3 uid="uid://c4kv70afknxnt"]

[ext_resource type="Script" uid="uid://bgwe6d3dsq7qm" path="res://options.gd" id="1_5v8ap"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5v8ap")

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 114.0
grow_vertical = 0
text = "Back to Menu
"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -20.0
offset_right = 104.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Reset" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Delete Save (This completely removes 
all save data including prestige, 
achievements, and everything else."

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Music Volume"
horizontal_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 0.0
step = 0.1

[node name="SFXVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SFX Volume"
horizontal_alignment = 1

[node name="SFXVolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 0.0
step = 0.1

[node name="ResetConfirm" type="ConfirmationDialog" parent="."]
ok_button_text = "Yes, it's time to start anew."
dialog_text = "Are you sure you want to raze your empire to the ground?
(NOTE: This deletes ALL progress including all prestiges.)"
cancel_button_text = "No, I'm not ready."

[node name="ResetBackdrop" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ResetMessage" type="RichTextLabel" parent="."]
visible = false
modulate = Color(0.54902, 0, 0.0823529, 1)
self_modulate = Color(0.638884, 2.02149e-06, 4.81307e-07, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/bold_italics_font_size = 1
theme_override_font_sizes/bold_font_size = 47
bbcode_enabled = true
text = "[center][b]The Overlord is dead... Long live the Overlord.
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="value_changed" from="VBoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="confirmed" from="ResetConfirm" to="." method="_on_reset_confirm_confirmed"]
